Fix menu-icon alignment

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -100,7 +100,7 @@ a.site-title {
 
     @include media-query($on-palm) {
         position: absolute;
-        margin-top: 0;
+        margin-top: $spacing-unit / 2;
         top: 9px;
         right: $spacing-unit / 2;
         background-color: $background-color;
